--- a/cv.html
+++ b/cv.html
@@ -18,6 +18,7 @@
             <li><a href="#cursos">Cursos realizados</a></li>
             <li><a href="#Habilidades">Habilidades y destrezas</a></li>
             <li><a href="#mi">Sobre mí</a></li>
+            <li><a href="#exp">Experiencia</a></li>
         </u1>
      </nav>
 </header>
@@ -58,6 +59,8 @@
         <li>Programación PLC</li>
         <li>Domotica 1</li>
     </ul>
+    <h3 id="exp">Experiencia</h3>
+    <p> 90 horas de prácticas preprofesionales en la unidad Educativa Cristiana Nazareno</p>
     <h4 id="mi">Sobre mi</h4>
     <p>Soy un joven chimboracence tengo 27 años , pertenezco a la Universidad Nacional de Chimborazo en la actualidad estudio en la facultad de Ciencias de la Educación Humanas y Tecnologías , donde día a día me esfuerzo por ser un futuro docente que aporte en la sociedad </p>
     <p>"No consideres al estudio como una obligación sino velo como una bonita forma"</p>
