--- a/index.html
+++ b/index.html
@@ -2,4 +2,6 @@
 layout: home
 title: Brian Fabricio Aguirre Alvarez
 subtitle: En esta página encontrarás información acerca de mi
+subtitle: Soy un joven chimboracence tengo 27 años , pertenezco a la Universidad Nacional de Chimborazo en la actualidad estudio en la facultad de Ciencias de la Educación Humanas y Tecnologías , donde día a día me esfuerzo por ser un futuro docente que aporte en la sociedad
+"No consideres al estudio como una obligación sino velo como una bonita forma"
 ---
