--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 layout: home
 title: Brian Fabricio Aguirre Alvarez
-subtitle: "En esta página encontrarás información acerca de mi"
 subtitle: "Si buscas resultados distintos no hagas siempre lo mismo"
 ---
+Soy un joven chimboracence tengo 27 años , pertenezco a la Universidad Nacional de Chimborazo en la actualidad 
+estudio en la facultad de Ciencias de la Educación Humanas y Tecnologías , 
+donde día a día me esfuerzo por ser un futuro docente que aporte en la sociedad
